6.1.2
-----
1. Alphabetically order user-defined roles in MAI track info.
2. Add 'Set/Disc subtitle' to advanced search for LMS 9.0+ - thanks to Michael Herger.
3. Add Spanish translation - thanks to arpena.
4. In mobile layout with bottom navigation add more padding between this and
   controls.

6.1.1
-----
1. If navigating from clicked item (e.g. year) don't refresh home before
   showing relevant list.
2. Allow 3rd party scrollable lists to provide subtitle for settings UI.
3. Ensure title and 'Close' button remain visible in 'Scrollable lists'
   dialog.
4. Add 'Subtitle' to advanced search for LMS 9.0+ - thanks to Michael Herger.
5. On desktop browsers dim main toolbar when window does not have focus.
6. For desktop layout if queue is shown unpinned then adjust position of hover
   buttons in browse lists.
7. Disable prev/next button in party mode.

6.1.0
-----
 1. Add ability for other plugins to provide scrolled lists - thanks to Michael
    Herger.
 2. Allow for more items in scrolled window if view is wider.
 3. Allow placing 'Explore' into a scrolled list.
 4. Remove long-press on back button on iOS.
 5. Update home button option to be; don't show, always show, show if wide
    enough.
 6. For non-touch devices, increase height of song progressbar on hover.
 7. Add Korean translation - thanks to Zerglrisk
 8. Fix not being able to interact with queue when its shown over now-playing.
 9. With release types, if only have one of singular/plural then use the
    defined value for the missing value.
10. When removing multiple playlists, remove in reverse order.
11. Remove 'Create mix' entries and replace with 'Start artist mix' that will
    use either BlissMixer or LastMix to start a mix of artist related tracks.
12. Update copy of Material Icons font.
13. Add 'Information' and 'Start artist mix' when listing composer works.
14. Open 'Lyrion technical information' link in new window/tab using 'Default'
    skin.