@@ -5,6 +5,7 @@
 3. Add Spanish translation - thanks to arpena.
 4. In mobile layout with bottom navigation add more padding between this and
    controls.
+5. Re-add 'Play all' and 'Add all' actions to clamped search results.
 
 6.1.1
 -----
